# dumber

./: .gitignore  README.md
software/raspberry/superviseur-robot/: .gitignore  CMakeLists.txt  ProjDestijl.cbp  README.md  compile_commands.json  gdbsudo.sh  guide_prise_en_main_eclipse.docx  main.cpp  tasks.cpp  tasks.h  tasks_pthread.cpp  tasks_pthread.h  wrapper.c
software/raspberry/superviseur-robot-dumber-pthread/: CMakeLists.txt  main.cpp  superviseur.doxygen  tasks.cpp  tasks.h  tasks_pthread.cpp  tasks_pthread.h
software/raspberry/superviseur-robot-dumber-pthread/lib/: .gitignore  camera.cpp  camera.h  commonitor.cpp  comrobot.cpp  comrobot.h  img.cpp  img.h  messages.cpp
software/raspberry/superviseur-robot-dumber-pthread/nbproject/: Makefile-Debug__PC_.mk  Makefile-Debug__RPI_.mk  Makefile-JPO2019_RPI_.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug__PC_.bash  Package-JPO2019_RPI_.bash  configurations.xml  project.xml
software/raspberry/superviseur-robot-dumber-pthread/nbproject/private/: Makefile-variables.mk  configurations.xml  private.xml  timestamps-10.105.1.7-xenomai-22  timestamps-192.168.1.141-xenomai-22
software/raspberry/superviseur-robot/Essai_VSC/: CMakeLists.txt  main.cpp
software/raspberry/superviseur-robot/destijl_init/: Makefile  main.cpp
software/raspberry/superviseur-robot/destijl_init/header/: functions.h
software/raspberry/superviseur-robot/destijl_init/src/: functions.cpp
software/raspberry/superviseur-robot/example/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  rtvideoExample.cpp  serialExample.cpp  uiExample.cpp
software/raspberry/superviseur-robot/example/serialTest/: makefile  sources.mk
software/raspberry/superviseur-robot/example/serialTest/lib/: subdir.mk
software/raspberry/superviseur-robot/example/serialTest/src/: subdir.mk
software/raspberry/superviseur-robot/example/stress/: .gitignore  main.cpp
software/raspberry/superviseur-robot/examples/: CMakeLists.txt
software/raspberry/superviseur-robot/examples/src/: serialTest.cpp  serverTest.cpp
software/raspberry/superviseur-robot/lib/: .gitignore  CMakeLists.txt  Robot.h  TPRT.Doxyfile  TcpServer.h  camera.cpp  camera.h  comgui.cpp  comgui.h  commonitor.cpp  commonitor.h  comrobot.cpp  comrobot.h  definitions.h  image.cpp  image.h  img.cpp  img.h  message.h  messages.cpp  messages.h  monitor.cpp  monitor.h  robot.cpp  robot.h  server.h
software/raspberry/superviseur-robot/lib/doc/html/: annotated.html  annotated_dup.js  classes.html  definitions_8h.html  definitions_8h.js  definitions_8h__dep__incl.map  definitions_8h__dep__incl.md5  definitions_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  image_8cpp.html  image_8cpp.js  image_8cpp__incl.map  image_8cpp__incl.md5  image_8cpp_source.html  image_8h.html  image_8h.js  image_8h__dep__incl.map  image_8h__dep__incl.md5  image_8h__incl.map  image_8h__incl.md5  image_8h_source.html  index.html  (+63 more)
software/raspberry/superviseur-robot/lib/src/: Robot.cpp  Serial.cpp  TcpServer.cpp  image.cpp  message.cpp  monitor.cpp  server.cpp
software/raspberry/superviseur-robot/nbproject/: Makefile-Debug.mk  Makefile-Debug__PC_.mk  Makefile-Debug__Pthread_.mk  Makefile-Debug__Pthread__RPI.mk  Makefile-Debug__RPI_.mk  Makefile-JPO2019_RPI_.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug__PC_.bash  Package-Debug__Pthread_.bash  Package-Debug__Pthread__RPI.bash  Package-Debug__RPI_.bash  Package-JPO2019_RPI_.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
software/raspberry/superviseur-robot/nbproject/private/: Default.properties  Makefile-variables.mk  configurations.xml  downloads-10.105.1.13-pi-22  private.xml  timestamps-10.105.0.141-xenomai-22  timestamps-10.105.1.11-pi-22  timestamps-10.105.1.13-pi-22  timestamps-10.105.1.3-pi-22  timestamps-10.105.1.7-pi-22  timestamps-10.105.1.7-xenomai-22  timestamps-10.105.1.96-pi-22
software/raspberry/superviseur-robot/not_for_students/pthread_version/: tasks_pthread.cpp  tasks_pthread.h
software/raspberry/superviseur-robot/src/: Serial.h  definitions.h  image.cpp  image.h  message.cpp  message.h  robot.cpp  robot.h
software/raspberry/superviseur-robot/src.sav/: image.cpp  monitor.cpp  robot.cpp
software/raspberry/superviseur-robot/superviseur/: .gitignore  CMakeLists.txt
software/raspberry/superviseur-robot/superviseur-pthread/: CMakeLists.txt
software/raspberry/superviseur-robot/superviseur-pthread/src/: Program.cpp  Tasks.cpp  Tasks.h
software/raspberry/superviseur-robot/superviseur/nbproject/: Makefile-Debug.mk  Makefile-Debug__RPI_.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Debug__RPI_.bash  Package-Release.bash  configurations.xml  project.xml
software/raspberry/superviseur-robot/superviseur/src/: functions.cpp  functions.h  main.cpp
(+772 files in other folders)
